# RAG_APP

./: .gitignore  README.md  _main.py  app.py  config.py  ingest.py  main.py  model.py  prompts.py  pyproject.toml  test.py
